<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bright_set_back"
    android:orientation="vertical" 
    android:layout_centerHorizontal="true"
   	android:layout_centerVertical="true">
 
		<TextView
			android:id="@+id/value_text_bright"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.5" 
			android:gravity="center"
			android:textSize="18sp"
			android:layout_marginTop="15dip"
			android:layout_marginLeft="150dip"/>
		
    	<LinearLayout 
	    android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:orientation="horizontal">
			        
		<TextView
			android:id="@+id/apical_text_bright"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.5" 
			android:gravity="center"
			android:textSize="22sp"
			android:text="@string/bright"
			android:layout_marginLeft="0dip" />
			
		<SeekBar
			android:id="@+id/apical_bright_seekbar"
		    android:layout_width="253dip"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="5dp"
		    android:layout_weight="1" 
			android:progressDrawable="@drawable/seek_img"
	        android:thumb="@drawable/seek_thumb" 
	        android:thumbOffset="19dip"
	        android:minHeight="19dip"   
	        android:maxHeight="19dip" 
	        android:paddingLeft="19dip"  
            android:paddingRight="19dip"/>
		</LinearLayout>	   
	
		<TextView
			android:id="@+id/value_text_contrast"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.5" 
			android:gravity="center"
			android:textSize="18sp"
			android:layout_marginTop="15dip"
			android:layout_marginLeft="150dip"/>
		
    	
		<LinearLayout 
	    android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:orientation="horizontal">
			        
		<TextView
			android:id="@+id/apical_text_contrast"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.5" 
			android:gravity="center"
			android:textSize="22sp"
			android:text="@string/contrast"
			android:layout_marginLeft="0dip" />
			
		<SeekBar
			android:id="@+id/apical_contrast_seekbar"
		    android:layout_width="253dip"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="5dp"
		    android:layout_weight="1" 
			android:progressDrawable="@drawable/seek_img"
	        android:thumb="@drawable/seek_thumb" 
	        android:thumbOffset="19dip"
	        android:minHeight="19dip"   
	        android:maxHeight="19dip" 
	        android:paddingLeft="19dip"  
            android:paddingRight="19dip"/>
		</LinearLayout>	   
	
		<TextView
			android:id="@+id/value_text_tone"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.5" 
			android:gravity="center"
			android:textSize="18sp"
			android:layout_marginTop="15dip"
			android:layout_marginLeft="150dip"
			android:visibility="gone"/>
		
 		<LinearLayout 
	    android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:orientation="horizontal"
	   	android:visibility="gone">
			        
		<TextView
			android:id="@+id/apical_text_tone"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.5" 
			android:gravity="center"
			android:textSize="22sp"
			android:text="@string/tone"
			android:layout_marginLeft="0dip" />
			
		<SeekBar
			android:id="@+id/apical_tone_seekbar"
		    android:layout_width="253dip"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="5dp"
		    android:layout_weight="1" 
			android:progressDrawable="@drawable/seek_img"
	        android:thumb="@drawable/seek_thumb" 
	        android:thumbOffset="19dip"
	        android:minHeight="19dip"   
	        android:maxHeight="19dip" 
	        android:paddingLeft="19dip"  
            android:paddingRight="19dip"/>
	</LinearLayout>	   
	
</LinearLayout>
